--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Vite-React-Ts-Eslint-Prettier_template</title>
-
-    <meta name="description" content="My Awesome AppRouter description">
-    <link rel="icon" href="/icons/favicon.ico">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-180x180.png" sizes="180x180">
-    <link rel="mask-icon" href="/icons/maskable-icon-512x512.png" color="#FFFFFF">
-
-    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
